--- a/src/assets/data/12.6.css
+++ b/src/assets/data/12.6.css
@@ -20,7 +20,6 @@ figure {
 }
 header {
   color: white;
-  inline-size: 75vw;
   margin: 0 auto;
   text-align: center;
   text-shadow: 0 1px 2px black;
